Complete and fix cart.html,cart_styles.css and add webpage checkout

--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Your Shopping Cart</title>
+    <title>Giỏ Hàng Của Bạn</title>
   </head>
   <body>
     <div class="cart">
@@ -31,7 +31,7 @@
         </div>
         <div class="info_container info_product">
           <div class="info_book item-1">
-            <img src="asset/Pair_programming_with_ChatGPT.jpg" alt="book1" />
+            <img src="img/Pair_programming_with_ChatGPT.jpg" alt="book1" />
             <div class="info_text">
               <p>Pair Programming with ChatGPT</p>
               <p>by Michel D. Callachan</p>
@@ -51,7 +51,7 @@
 
         <div class="info_container info_product">
           <div class="info_book item-1">
-            <img src="asset/Pair_programming_with_ChatGPT.jpg" alt="book1" />
+            <img src="img/Pair_programming_with_ChatGPT.jpg" alt="book1" />
             <div class="info_text">
               <p>Pair Programming with ChatGPT</p>
               <p>by Michel D. Callachan</p>
@@ -71,22 +71,56 @@
       </div>
 
       <div class="cart_checkout">
-          <h2>Có thể bạn sẽ thích</h2>
         <div class="item_like">
-          <div class="card">
-            <i class="bx bxs-heart"></i>
-            <img src="asset/Ml_for_high-risk_app.jpg" alt="book1" />
-          </div>
-          <div class="card">
-            <i class="bx bxs-heart"></i>
-            <img src="asset/The_age_of_Ai.jpg" alt="book1" />
-          </div>
-          <div class="card">
-            <i class="bx bxs-heart"></i>
-            <img src="asset/The_age_of_Ai.jpg" alt="book1" />
+          <h2>Có thể bạn sẽ thích</h2>
+          <div class="item_like card_like">
+            <div class="item_info">
+              <div class="card">
+                <i class="bx bxs-heart"></i>
+                <img src="img/ML_for_absolute_beginners.jpg" alt="book1" />
+              </div>
+              <p>Machine Learning for Absolute beginers</p>
+              <span>250,000<u>đ</u></span>
+              <button>Thêm vào giỏ</button>
+            </div>
+            <div class="item_info">
+              <div class="card">
+                <i class="bx bxs-heart"></i>
+                <img src="img/The_age_of_Ai.jpg" alt="book1" />
+              </div>
+              <p>The age of AI</p>
+              <span>280,000<u>đ</u></span>
+              <button>Thêm vào giỏ</button>
+            </div>
+            <div class="item_info">
+              <div class="card">
+                <i class="bx bxs-heart"></i>
+                <img src="img/The_age_of_Ai.jpg" alt="book1" />
+              </div>
+              <p>The age of AI</p>
+              <span>280,000<u>đ</u></span>
+              <button>Thêm vào giỏ</button>
+            </div>
+            <div class="right_arrow">
+              <i class="bx bx-chevron-right"></i>
+            </div>
           </div>
         </div>
-        <div class="cart_pay"></div>
+        <div class="cart_pay">
+          <div class="column_item pay_total">
+            <p>TỔNG CỘNG</p>
+            <p>600,000<u>đ</u></p>
+          </div>
+          <div class="column_item pay_discount">
+            <i class="bx bxs-discount"></i>
+            <p>Mã giảm giá</p>
+            <a href="">
+              Xem tất cả
+              <i class="bx bx-chevron-right"></i>
+            </a>
+          </div>
+          <a href="checkouts.html" class="column_item pay_btn"><p>Thanh toán</p></a>
+        </div>
       </div>
     </div>
   </body>
